--- a/style.css
+++ b/style.css
@@ -1,1 +1,24 @@
+.form-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+.form-container form{
+    display: flex;
+    place-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    background-color: rgb(75, 72, 72);
+    width: 500px;
+    height: 500px;
+    margin-top: 50px;
+    border-radius: 10px;
+    color: white;
+    font-size: 28px;
+    font-family: sans-serif;
+}
+
+.form-container div{
+    margin-bottom: 15px;
+}
