--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: #c6d4e1;
+    margin: 0;
 }
 
 .form-container{
@@ -11,6 +12,10 @@ body{
 .form-container h2{
     text-align: center;
     color: #ffffff;
+}
+
+.form-container label[for="connected"] {
+    font-size: 15px;
 }
 
 .form-container .field{
@@ -46,13 +51,13 @@ body{
     margin-bottom: 15px;
     color: #ffffff;
 }
-.form-container div:last-child{
+.form-container .btn-submit{
     display: flex;
     justify-content: center;
     margin-top: 20px;
 }
 
-.form-container div:last-child input{
+.form-container .btn-submit input{
     padding: 10px 0;
     width: 237px;
     outline: none;
@@ -67,24 +72,6 @@ body{
     background-color: rgb(48, 48, 48);
     color: white;
     justify-self: center;
-    font-size: 20px;
-    border: none;
-    padding: 10px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.register-page{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: rgb(75, 72, 72);
-}
-
-.register-page button{
-    background-color: rgb(48, 48, 48);
-    color: white;
     font-size: 20px;
     border: none;
     padding: 10px;
