--- a/style_list.css
+++ b/style_list.css
@@ -85,3 +85,8 @@ main{
   background-color: rgba(0, 0, 0, 0.466);
   cursor: pointer;
 }
+
+.btn-delete, .btn-edit{
+  border: none;
+  cursor: pointer;
+}
