--- a/style_list.css
+++ b/style_list.css
@@ -3,8 +3,6 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Roboto', sans-serif;
-  background-color: #28313b;
-  color: white;
 }
 
 main{
@@ -13,7 +11,8 @@ main{
   justify-content: center;
   align-items: center;
   height: 100vh;
-
+  background-color: #c6d4e1;
+  color: #0288d1;
 }
 
 .fields{
@@ -29,7 +28,6 @@ main{
   margin: 10px;
   padding: 10px;
   border-radius: 5px;
-  color: white;
   font-size: 20px;
   font-family: sans-serif;
   font-weight: bold;
@@ -41,23 +39,17 @@ main{
   border-radius: 5px;
 }
 
-.fields button {
-  margin: 10px;
-  padding: 10px;
-  border-radius: 5px;
-  cursor: pointer;
-} 
-
 .tabelas {
   max-width: fit-content;
   margin: 0 auto;
   padding: 10px;
-  background-color: #364250;
+  background: #005e91;
   text-align: center;
   margin-bottom: 20px;
 }
 
-.tabelas td {
+.tabelas td, .tabelas tr {
+  color: white;
   padding: 10px 20px;
   word-wrap: break-word;
 }
@@ -67,26 +59,10 @@ main{
   border-spacing: 0 3px;
   margin: 0 auto;
   width: 80vw;
-  color: white;
-}
-
-.tabelas tr {
-  background-color: #28313b;
-}
-
-#exit {
-  top: 0;
-  right: 0;
-  width: 100px;
-  margin: 10px;
-  padding: 10px;
-  font-size: 20px;
-  color: rgb(255, 255, 255);
-  background-color: rgba(0, 0, 0, 0.466);
-  cursor: pointer;
 }
 
 .btn-delete, .btn-edit{
   border: none;
   cursor: pointer;
+  background: #005e91;
 }
