--- a/style_items.css
+++ b/style_items.css
@@ -80,7 +80,7 @@
     text-align: center;
     margin-bottom: 20px;
     border-radius: 10px;
-    border: 3px black solid;
+    /* border: 3px black solid; */
   }
   
   .tabelas td, .tabelas tr {
