--- a/style_list.css
+++ b/style_list.css
@@ -61,9 +61,11 @@ main{
   max-width: fit-content;
   margin: 0 auto;
   padding: 10px;
-  background: #005e91;
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,99,255,1) 0%, rgba(9,81,121,1) 100%);
   text-align: center;
   margin-bottom: 20px;
+  border-radius: 10px;
 }
 
 .tabelas td, .tabelas tr {
